3.1.0/_sources/gallery/pyplots/whats_new_98_4_legend.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pyplots_whats_new_98_4_legend.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_whats_new_98_4_legend.py:


=======================
Whats New 0.98.4 Legend
=======================

Create a legend and tweak it with a shadow and a box.

.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np


    ax = plt.subplot(111)
    t1 = np.arange(0.0, 1.0, 0.01)
    for n in [1, 2, 3, 4]:
        plt.plot(t1, t1**n, label="n=%d"%(n,))

    leg = plt.legend(loc='best', ncol=2, mode="expand", shadow=True, fancybox=True)
    leg.get_frame().set_alpha(0.5)


    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_whats_new_98_4_legend_001.png
    :class: sphx-glr-single-img




------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.legend
    matplotlib.pyplot.legend
    matplotlib.legend.Legend
    matplotlib.legend.Legend.get_frame







.. _sphx_glr_download_gallery_pyplots_whats_new_98_4_legend.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: whats_new_98_4_legend.py <whats_new_98_4_legend.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: whats_new_98_4_legend.ipynb <whats_new_98_4_legend.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
