3.3.4/_sources/gallery/pyplots/whats_new_98_4_legend.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/whats_new_98_4_legend.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_whats_new_98_4_legend.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_whats_new_98_4_legend.py:


========================
What's New 0.98.4 Legend
========================

Create a legend and tweak it with a shadow and a box.

.. GENERATED FROM PYTHON SOURCE LINES 8-23

.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np


    ax = plt.subplot(111)
    t1 = np.arange(0.0, 1.0, 0.01)
    for n in [1, 2, 3, 4]:
        plt.plot(t1, t1**n, label=f"n={n}")

    leg = plt.legend(loc='best', ncol=2, mode="expand", shadow=True, fancybox=True)
    leg.get_frame().set_alpha(0.5)


    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_whats_new_98_4_legend_001.png
    :alt: whats new 98 4 legend
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 24-31

------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:

.. GENERATED FROM PYTHON SOURCE LINES 32-38

.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.legend
    matplotlib.pyplot.legend
    matplotlib.legend.Legend
    matplotlib.legend.Legend.get_frame




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function Legend.get_frame at 0x7fcc164d2160>




.. _sphx_glr_download_gallery_pyplots_whats_new_98_4_legend.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: whats_new_98_4_legend.py <whats_new_98_4_legend.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: whats_new_98_4_legend.ipynb <whats_new_98_4_legend.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
